--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "search_repository_react",
+  "name": "SearchRrepositoryReact",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://xin0913.github.io/search_repository_react",
+  "homepage": "https://xin0913.github.io/SearchRrepositoryReact",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
